# interhelm

./: .gitignore  AGENTS.md  CLAUDE.md  PHILOSOPHY.md  README.md
.claude-plugin/: plugin.json
agents/review/: runtime-reviewer.md
hooks/: auto-health-check.sh  browser-on-native.sh  cuj-reminder.sh  hooks.json
scripts/: bump-version.sh
skills/cuj-verification/: SKILL.md
skills/diagnostic-maturation/: SKILL.md
skills/runtime-diagnostics/: SKILL.md
skills/smoke-test-design/: SKILL.md
templates/cli/: Cargo.toml  README.md
templates/cli/src/: main.rs
templates/rust-hyper/: Cargo.toml  README.md
templates/rust-hyper/src/: handlers.rs  main.rs  state.rs
tests/: pyproject.toml
tests/structural/: conftest.py  test_skills.py  test_structure.py
