[package]
name = "app-diag"  # CUSTOMIZE: rename to your-app-diag
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
